[project]
name = "vlm-stl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.19.0",
    "open3d>=0.19.0",
    "opencv-python>=4.13.0.92",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "transformers>=5.11.0",
]
